k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-api
  name: hello-world-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3200
  selector:
    app: hello-world-api
  type: NodePort
