k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world-api
  name: hello-world-api
spec:
  path: "/languages"
  port:
    targetPort: 3200
  to:
    kind: ""
    name: hello-world-api
